# ai2npu

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  config.example.toml  technical_specification.md
.cargo/: config.toml
.github/workflows/: format.yml  release.yml  windows-build.yml
docs/: development-setup-and-build.en.md  development-setup-and-build.md  installation-and-operation.en.md  installation-and-operation.md  marvin-context.md  openvino-sdk-setup.en.md  openvino-sdk-setup.md  streaming-api.md
examples/: whisper_rtf_spike.rs
native/ai2npu_genai_bridge/: CMakeLists.txt  README.md
native/ai2npu_genai_bridge/include/: ai2npu_genai_bridge.h
native/ai2npu_genai_bridge/src/: ai2npu_genai_bridge.cpp
packaging/: ai2npu.iss  prepare-dist.ps1
scripts/: setup-openvino-sdk.ps1
src/: admin_client.rs  audio.rs  bge_embeddings.rs  bge_tokenizer.rs  cli.rs  config.rs  embeddings.rs  error.rs  genai_bridge.rs  http.rs  inference.rs  lib.rs  logs.rs  main.rs  model_installer.rs  model_registry.rs  openvino_backend.rs  openvino_c.rs  queue.rs  resample.rs  streaming.rs  vad.rs  windows_service.rs
tests/: audio_tests.rs  cli_tests.rs  config_tests.rs  embeddings_tests.rs  http_tests.rs  logs_tests.rs  openvino_c_tests.rs  queue_tests.rs  streaming_tests.rs  tokenizer_tests.rs  vad_tests.rs
