[package]
name = "ai2npu"
version = "1.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["multipart", "ws"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokenizers = "0.22"
base64 = "0.22"
libloading = "0.8"
hex = "0.4"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rubato = "0.16"
voice_activity_detector = { version = "0.2.1", features = ["load-dynamic"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"

[dev-dependencies]
futures-util = "0.3"
http-body-util = "0.1"
tempfile = "3"
tokio-tungstenite = "0.24"
tower = { version = "0.5", features = ["util"] }
